--- a/css/styles.css
+++ b/css/styles.css
@@ -37,6 +37,8 @@
     color: #1c1e21;
     font-family: Arial;
     direction: ltr;
+    line-height: 1.34;
+    font-size: 12px;
   }
 
 
@@ -52,16 +54,13 @@
     height: 536px;
     margin: 0 auto;
     padding: 20px 0;
-    
-    /* display: flex; */
+    display: flex;
   }
   
   .logo-heading-container {
     display: inline-block;
-    margin-right: 0;
     padding-right: 32px;
     vertical-align: top;
-    margin: 0 auto;
   }
 
   .logo-container {
@@ -86,7 +85,7 @@
   }
 
   .credential-container {
-    float: right;
+    display: inline-block;
     vertical-align: top;
   }
 
@@ -105,7 +104,7 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, .1), 0 8px 16px rgba(0, 0, 0, .1);
     box-sizing: border-box;
     margin: 40px 0 0;
-    padding: 20px 0 2px;
+    padding: 10px 0 24px;
     width: 396px;
   }
 
@@ -113,11 +112,15 @@
     padding: 6px 0;
     width: 364px;
     margin: 0 auto;
-    
   }
 
   .button-container {
     padding: 6px 0 0;
+  }
+
+  .input-wrapper {
+    display: block;
+    height: 130.74px;
   }
 
   input[type="email"], input[type="password"] {
@@ -128,10 +131,11 @@
     width: 364px;
     border: 1px solid #dddfe2;
     color: #1d2129;
-    height: 50px;
+    height: 51.334px;
     line-height: 16px;
     vertical-align: middle;
     outline: none;
+    box-shadow: inset 0px 1px 0 0 rgb(240, 240, 240)
   }
 
   input[type="email"]:focus, input[type="password"]:focus {
@@ -162,5 +166,74 @@
 
   .button:hover {
     background-color: #1877f2;
-    border-color: #365899
+    border-color: #365899;
+    transition: 200ms cubic-bezier(.08,.52,.52,1) background-color, 200ms cubic-bezier(.08,.52,.52,1) box-shadow, 200ms cubic-bezier(.08,.52,.52,1) transform;
+  }
+
+  .forgot-password-container{
+    margin-top: 16px;
+    
+  }
+
+  .forgot-password {
+    text-align: center;
+    font-size: 14px;
+    color: #0866FF;
+    font-weight: 500;
+    cursor: pointer;
+  }
+
+  .forgot-password:hover {
+    text-decoration: underline;
+  }
+  
+  .line {
+    align-items: center;
+    border-bottom: 1px solid #dadde1;
+    margin: 20px 16px;
+    text-align: center;
+  }
+
+  .create-account-container {
+    padding: 6px 0 0;
+  }
+
+  .create-account {
+    display: inline-block;
+    background-color: #42B72A;
+    border-radius: 6px;
+    font-size: 17px;
+    line-height: 48px;
+    padding: 0 16px;
+    color: #fff;
+    font-weight: bold;
+    cursor: pointer;
+  }
+
+  .create-account:hover {
+    border-color: #36a420;
+    background-color: #36a420;
+    transition: 200ms cubic-bezier(.08,.52,.52,1) background-color, 200ms cubic-bezier(.08,.52,.52,1) box-shadow, 200ms cubic-bezier(.08,.52,.52,1) transform;
+  }
+
+  .create-page-container {
+    border-top: none;
+    color: #1c1e21;
+    font-family: Arial;
+    font-size: 14px;
+    padding-top: 0;
+    margin-top: 28px;
+    text-align: center;
+    display: block;
+  }
+
+  .create-page {
+    font-size: 14px;
+    font-weight: 600;
+    color: inherit;
+    cursor: pointer;
+  }
+
+  .create-page:hover {
+    text-decoration: underline;
   }
